input field uses placeholder instead of value

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 						id="urlanon"
 						type="url"
 						name="urlanon"
-						value="http://example.com/path/index.html?message=hello&who=world"
+						placeholder="https://example.com/path/index.html?message=hello&who=world"
+						aria-placeholder="https://example.com"
 					/><br />
 					<input type="submit" value="Vermurks die URL" />
 				</form>
