new version of pico.classless

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 						id="addtext"
 						type="checkbox"
 						name="addtext"
-						checked="true"
+						checked="checked"
+						role="switch"
 					>
 				</div>
 			</div>
